@@ -29,8 +29,8 @@ public class VariableGetResponseTest {
 
     @Test
     public void tstVariableGetResponseConstructorSuccess() {
-        List<VariableResponse> variables = Arrays.asList(new VariableResponse("SYSNAME", "ZOS01", "System name"));
-        List<VariableResponse> symbols = Arrays.asList(new VariableResponse("&SYSNAME", "ZOS01", "System symbol"));
+        List<VariableResponse> variables = List.of(new VariableResponse("SYSNAME", "ZOS01", "System name"));
+        List<VariableResponse> symbols = List.of(new VariableResponse("&SYSNAME", "ZOS01", "System symbol"));
         VariableGetResponse response = new VariableGetResponse(variables, symbols);
         assertEquals(1, response.getSystemVariableList().size());
         assertEquals(1, response.getSystemSymbolList().size());
@@ -45,7 +45,7 @@ public class VariableGetResponseTest {
 
     @Test
     public void tstVariableGetResponseToStringSuccess() {
-        List<VariableResponse> variables = Arrays.asList(new VariableResponse("SYSNAME", "ZOS01", "System name"));
+        List<VariableResponse> variables = List.of(new VariableResponse("SYSNAME", "ZOS01", "System name"));
         VariableGetResponse response = new VariableGetResponse(variables, Collections.emptyList());
         String result = response.toString();
         assertTrue(result.contains("systemVariableList"));
